--- a/backend/detection.ipynb
+++ b/backend/detection.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "f56c0f0c",
+   "id": "103890fd",
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +154,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "2caf21ef",
+   "id": "177de424",
    "metadata": {},
    "outputs": [
     {
@@ -1204,7 +1204,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "fd2c1829",
+   "id": "0c8f0175",
    "metadata": {},
    "outputs": [
     {
@@ -1269,7 +1269,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "bf16c8f6",
+   "id": "293295d2",
    "metadata": {},
    "outputs": [
     {
@@ -1339,16 +1339,225 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "c21f539c",
+   "execution_count": 15,
+   "id": "f9f38af3",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'mediapipe'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[15], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mcv2\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mmediapipe\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mmp\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mmath\u001b[39;00m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;66;03m# Initialize MediaPipe hand solution\u001b[39;00m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'mediapipe'"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "\n",
+    "import cv2\n",
+    "import mediapipe as mp\n",
+    "import math\n",
+    "\n",
+    "# Initialize MediaPipe hand solution\n",
+    "mp_hands = mp.solutions.hands\n",
+    "hands = mp_hands.Hands(max_num_hands=1, min_detection_confidence=0.7, min_tracking_confidence=0.5)\n",
+    "\n",
+    "# Initialize variables for hand shaking detection\n",
+    "prev_angle = None  # Previous angle of the pen\n",
+    "pen_detected = False  # Flag to track pen detection\n",
+    "pen_endpoints = [(0, 0), (0, 0)]  # Pen start and end points\n",
+    "nose_coords = (0, 0)  # Nose coordinates\n",
+    "click_count = 0  # Number of pen clicks\n",
+    "is_pen_down = False  # Flag to track if pen is down\n",
+    "shake_count=0\n",
+    "\n",
+    "# Initialize MediaPipe face solution\n",
+    "mp_face = mp.solutions.face_mesh\n",
+    "face_mesh = mp_face.FaceMesh(min_detection_confidence=0.5, min_tracking_confidence=0.5)\n",
+    "draw_face = mp.solutions.drawing_utils\n",
+    "\n",
+    "# Custom face landmark connections\n",
+    "FACE_CONNECTIONS = [\n",
+    "    (10, 234), (234, 127), (127, 162), (162, 21), (21, 54), (54, 103),\n",
+    "    (103, 67), (67, 109), (109, 10), (10, 152), (152, 234), (152, 454),\n",
+    "    (454, 234), (152, 332), (332, 454), (454, 361), (361, 332), (234, 454)\n",
+    "]\n",
+    "\n",
+    "# Initialize variables for vertical and horizontal shaking detection\n",
+    "vertical_shake_threshold = 20  # Threshold for vertical position change to detect shaking\n",
+    "horizontal_shake_threshold = 20  # Threshold for horizontal position change to detect shaking\n",
+    "vertical_shake_detected = False  # Flag to track vertical shaking detection\n",
+    "horizontal_shake_detected = False  # Flag to track horizontal shaking detection\n",
+    "prev_thumb_x, prev_thumb_y = 0, 0  # Previous thumb position\n",
+    "prev_index_x, prev_index_y = 0, 0  # Previous index finger position\n",
+    "\n",
+    "# Start capturing video from the webcam\n",
+    "cap = cv2.VideoCapture(0)\n",
+    "\n",
+    "while cap.isOpened():\n",
+    "    ret, frame = cap.read()\n",
+    "    if not ret:\n",
+    "        continue\n",
+    "\n",
+    "    # Flip the frame horizontally for a natural viewing experience\n",
+    "    frame = cv2.flip(frame, 1)\n",
+    "\n",
+    "    # Convert the BGR image to RGB\n",
+    "    rgb_frame = cv2.cvtColor(frame, cv2.COLOR_BGR2RGB)\n",
+    "\n",
+    "    # Process the frame and detect hands\n",
+    "    results_hands = hands.process(rgb_frame)\n",
+    "\n",
+    "    # Process the frame and detect facial landmarks\n",
+    "    results_face = face_mesh.process(rgb_frame)\n",
+    "\n",
+    "    # Draw the detected face landmarks and connections on the frame\n",
+    "    if results_face.multi_face_landmarks:\n",
+    "        for face_landmarks in results_face.multi_face_landmarks:\n",
+    "            draw_face.draw_landmarks(frame, face_landmarks, mp_face.FACEMESH_CONTOURS)\n",
+    "\n",
+    "            # Get the nose coordinates using the correct index for the nose tip\n",
+    "            nose_landmark = face_landmarks.landmark[1]  # Use the index directly\n",
+    "            nose_x, nose_y = int(nose_landmark.x * frame.shape[1]), int(nose_landmark.y * frame.shape[0])\n",
+    "            nose_coords = (nose_x, nose_y)\n",
+    "\n",
+    "    # Draw the custom hand landmarks on the frame\n",
+    "    if results_hands.multi_hand_landmarks:\n",
+    "        for hand_landmarks in results_hands.multi_hand_landmarks:\n",
+    "            # Get landmarks for thumb tip and index finger tip\n",
+    "            thumb_tip = hand_landmarks.landmark[mp_hands.HandLandmark.THUMB_TIP]\n",
+    "            index_tip = hand_landmarks.landmark[mp_hands.HandLandmark.INDEX_FINGER_TIP]\n",
+    "            thumb_x, thumb_y = int(thumb_tip.x * frame.shape[1]), int(thumb_tip.y * frame.shape[0])\n",
+    "\n",
+    "            # Calculate the distance between nose and thumb tip (pen's tip)\n",
+    "            distance = math.hypot(thumb_x - nose_x, thumb_y - nose_y) / 10  # Divide by 10 for better visualization\n",
+    "\n",
+    "            # Calculate the angle of the pen with respect to the vertical line at 90 degrees\n",
+    "            pen_dx = index_tip.x - thumb_tip.x\n",
+    "            pen_dy = index_tip.y - thumb_tip.y\n",
+    "            angle_rad = math.atan2(pen_dy, pen_dx)\n",
+    "            angle_with_vertical = 90 - math.degrees(angle_rad)  # Subtract from 90 to get the angle with respect to vertical\n",
+    "\n",
+    "            # Check if the pen is green (assuming RGB color values)\n",
+    "            if frame[thumb_y, thumb_x, 1] > frame[thumb_y, thumb_x, 0] and frame[thumb_y, thumb_x, 1] > frame[thumb_y, thumb_x, 2]:\n",
+    "                if not pen_detected:  # Pen is detected for the first time\n",
+    "                    print(\"Pen detected!\")\n",
+    "                    cv2.putText(frame, 'Pen detected!', (10, 210), cv2.FONT_HERSHEY_SIMPLEX, 0.7, (0, 0, 255), 2)\n",
+    "                    pen_detected = False\n",
+    "                                # Print the distance and angle\n",
+    "                    distance_text = f\"Distance: {distance:.2f} pixels\"\n",
+    "                    angle_text = f\"Angle: {angle_with_vertical:.2f} degrees\"\n",
+    "                    click_text = f\"Clicks: {click_count}\"\n",
+    "                    shake_text=f\"Shake: {shake_count}\"\n",
+    "                    cv2.putText(frame, distance_text, (10, 30), cv2.FONT_HERSHEY_SIMPLEX, 0.7, (255, 255, 255), 2)\n",
+    "                    cv2.putText(frame, angle_text, (10, 60), cv2.FONT_HERSHEY_SIMPLEX, 0.7, (255, 255, 255), 2)\n",
+    "                    cv2.putText(frame, click_text, (10, 90), cv2.FONT_HERSHEY_SIMPLEX, 0.7, (255, 255, 255), 2)\n",
+    "                    cv2.putText(frame, shake_text, (10, 120), cv2.FONT_HERSHEY_SIMPLEX, 0.7, (255, 255, 255), 2)\n",
+    "\n",
+    "            # Calculate position changes for vertical and horizontal shaking detection\n",
+    "                    if prev_thumb_x != 0 and prev_thumb_y != 0 and prev_index_x != 0 and prev_index_y != 0:\n",
+    "                           vertical_change = abs(thumb_y - prev_thumb_y)\n",
+    "                           horizontal_change = abs(thumb_x - prev_thumb_x)\n",
+    "\n",
+    "                # Detect vertical shake\n",
+    "                    if vertical_change > vertical_shake_threshold:\n",
+    "                        vertical_shake_detected = True\n",
+    "                    else:\n",
+    "                        vertical_shake_detected = False\n",
+    "\n",
+    "                # Detect horizontal shake\n",
+    "                    if horizontal_change > horizontal_shake_threshold:\n",
+    "                        horizontal_shake_detected = True\n",
+    "                        shake_count+=1\n",
+    "                    else:\n",
+    "                        horizontal_shake_detected = False\n",
+    "\n",
+    "                        prev_thumb_x, prev_thumb_y = thumb_x, thumb_y\n",
+    "                        prev_index_x, prev_index_y = int(index_tip.x * frame.shape[1]), int(index_tip.y * frame.shape[0])\n",
+    "\n",
+    "            # Visualize shaking on the frame\n",
+    "                    if vertical_shake_detected:\n",
+    "                        cv2.putText(frame, 'VERTICAL SHAKE DETECTED', (10, 150), cv2.FONT_HERSHEY_SIMPLEX, 0.7, (0, 0, 255), 2)\n",
+    "                        shake_count+=1\n",
+    "                    if horizontal_shake_detected:\n",
+    "                        cv2.putText(frame, 'HORIZONTAL SHAKE DETECTED', (10, 180), cv2.FONT_HERSHEY_SIMPLEX, 0.7, (0, 0, 255), 2)\n",
+    "\n",
+    "    # Display theframe\n",
+    " \n",
+    "                    \n",
+    "\n",
+    "                # Check if the pen is clicked (angle change from downward to upward)\n",
+    "                if angle_with_vertical < 45 and is_pen_down:\n",
+    "                    click_count += 1  # Increment click count\n",
+    "                    is_pen_down = False  # Pen is lifted after click\n",
+    "\n",
+    "        else:\n",
+    "            pen_detected = False\n",
+    "            cv2.putText(frame, 'Pen Not detected!', (10, 210), cv2.FONT_HERSHEY_SIMPLEX, 0.7, (0, 0, 255), 2)\n",
+    "\n",
+    "    cv2.imshow('Hand Shake Detection', frame)\n",
+    "    pen_endpoints[0] = (thumb_x, thumb_y)\n",
+    "    is_pen_down = True  # Pen is down initially  \n",
+    "\n",
+    "    # Break the loop if 'q' is pressed\n",
+    "    if cv2.waitKey(1) & 0xFF == ord('q'):\n",
+    "        break\n",
+    "\n",
+    "# Release the capture and destroy any OpenCV windows\n",
+    "cap.release()\n",
+    "cv2.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "cc5f43bc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: mediapipe in c:\\users\\bhargav\\appdata\\roaming\\python\\python311\\site-packages (0.10.11)\n",
+      "Requirement already satisfied: absl-py in c:\\users\\bhargav\\anaconda3\\lib\\site-packages (from mediapipe) (2.1.0)\n",
+      "Requirement already satisfied: attrs>=19.1.0 in c:\\users\\bhargav\\anaconda3\\lib\\site-packages (from mediapipe) (22.1.0)\n",
+      "Requirement already satisfied: flatbuffers>=2.0 in c:\\users\\bhargav\\anaconda3\\lib\\site-packages (from mediapipe) (24.3.25)\n",
+      "Requirement already satisfied: jax in c:\\users\\bhargav\\appdata\\roaming\\python\\python311\\site-packages (from mediapipe) (0.4.25)\n",
+      "Requirement already satisfied: matplotlib in c:\\users\\bhargav\\anaconda3\\lib\\site-packages (from mediapipe) (3.7.2)\n",
+      "Requirement already satisfied: numpy in c:\\users\\bhargav\\anaconda3\\lib\\site-packages (from mediapipe) (1.24.3)\n",
+      "Requirement already satisfied: opencv-contrib-python in c:\\users\\bhargav\\appdata\\roaming\\python\\python311\\site-packages (from mediapipe) (4.9.0.80)\n",
+      "Requirement already satisfied: protobuf<4,>=3.11 in c:\\users\\bhargav\\anaconda3\\lib\\site-packages (from mediapipe) (3.20.3)\n",
+      "Requirement already satisfied: sounddevice>=0.4.4 in c:\\users\\bhargav\\appdata\\roaming\\python\\python311\\site-packages (from mediapipe) (0.4.6)\n",
+      "Requirement already satisfied: CFFI>=1.0 in c:\\users\\bhargav\\anaconda3\\lib\\site-packages (from sounddevice>=0.4.4->mediapipe) (1.15.1)\n",
+      "Requirement already satisfied: ml-dtypes>=0.2.0 in c:\\users\\bhargav\\anaconda3\\lib\\site-packages (from jax->mediapipe) (0.3.2)\n",
+      "Requirement already satisfied: opt-einsum in c:\\users\\bhargav\\anaconda3\\lib\\site-packages (from jax->mediapipe) (3.3.0)\n",
+      "Requirement already satisfied: scipy>=1.9 in c:\\users\\bhargav\\anaconda3\\lib\\site-packages (from jax->mediapipe) (1.11.1)\n",
+      "Requirement already satisfied: contourpy>=1.0.1 in c:\\users\\bhargav\\anaconda3\\lib\\site-packages (from matplotlib->mediapipe) (1.0.5)\n",
+      "Requirement already satisfied: cycler>=0.10 in c:\\users\\bhargav\\anaconda3\\lib\\site-packages (from matplotlib->mediapipe) (0.11.0)\n",
+      "Requirement already satisfied: fonttools>=4.22.0 in c:\\users\\bhargav\\anaconda3\\lib\\site-packages (from matplotlib->mediapipe) (4.25.0)\n",
+      "Requirement already satisfied: kiwisolver>=1.0.1 in c:\\users\\bhargav\\anaconda3\\lib\\site-packages (from matplotlib->mediapipe) (1.4.4)\n",
+      "Requirement already satisfied: packaging>=20.0 in c:\\users\\bhargav\\anaconda3\\lib\\site-packages (from matplotlib->mediapipe) (23.2)\n",
+      "Requirement already satisfied: pillow>=6.2.0 in c:\\users\\bhargav\\anaconda3\\lib\\site-packages (from matplotlib->mediapipe) (10.0.1)\n",
+      "Requirement already satisfied: pyparsing<3.1,>=2.3.1 in c:\\users\\bhargav\\anaconda3\\lib\\site-packages (from matplotlib->mediapipe) (3.0.9)\n",
+      "Requirement already satisfied: python-dateutil>=2.7 in c:\\users\\bhargav\\anaconda3\\lib\\site-packages (from matplotlib->mediapipe) (2.8.2)\n",
+      "Requirement already satisfied: pycparser in c:\\users\\bhargav\\anaconda3\\lib\\site-packages (from CFFI>=1.0->sounddevice>=0.4.4->mediapipe) (2.21)\n",
+      "Requirement already satisfied: six>=1.5 in c:\\users\\bhargav\\anaconda3\\lib\\site-packages (from python-dateutil>=2.7->matplotlib->mediapipe) (1.16.0)\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install mediapipe"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c2b967b2",
+   "id": "6f1cbb40",
    "metadata": {},
    "outputs": [],
    "source": []
