--- a/backend/Action Detection Refined.ipynb
+++ b/backend/Action Detection Refined.ipynb
@@ -26462,8 +26462,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -26480,11 +26482,8 @@
       "WARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.\n",
       " * Running on all addresses (0.0.0.0)\n",
       " * Running on http://127.0.0.1:5000\n",
-      " * Running on http://192.168.214.34:5000\n",
-      "Press CTRL+C to quit\n",
-      "127.0.0.1 - - [31/Mar/2024 06:58:15] \"GET /video_feed HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [31/Mar/2024 06:58:21] \"GET /video_feed HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [31/Mar/2024 06:59:10] \"GET /video_feed HTTP/1.1\" 200 -\n"
+      " * Running on http://192.168.19.34:5000\n",
+      "Press CTRL+C to quit\n"
      ]
     }
    ],
@@ -26504,7 +26503,7 @@
     "    # Convert text to speech\n",
     "    engine.say(text)\n",
     "    time.time()\n",
-    "#    engine.runAndWait()\n",
+    "    engine.runAndWait()\n",
     "\n",
     "app = Flask(__name__)\n",
     "\n",
@@ -26567,7 +26566,7 @@
     "\n",
     "                if average_neck_to_shoulder > good_posture_threshold:\n",
     "                    # Poor posture detected\n",
-    "                   # text_to_speech('Poor Posture Detected')\n",
+    "                    #text_to_speech('Poor Posture Detected')\n",
     "                    # Draw the text at the top right corner\n",
     "                    cv2.putText(frame, 'Poor Posture ', (frame.shape[1] - 160, 30), cv2.FONT_HERSHEY_SIMPLEX, 0.7,\n",
     "                                (0, 0, 255), 2)\n",
